--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mood-journal-capstone-backend",
   "version": "1.0.0",
-  "description": "This is a boilerplate project used for starting new projects!",
+  "description": "Backend for mood journal capstone",
   "main": "index.js",
   "scripts": {
     "test": "mocha --require test/setup.js",
@@ -25,16 +25,19 @@
   },
   "homepage": "https://github.com/hjthorpe/project-boilerplate#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.3",
+    "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
   },
   "directories": {
