--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "helmet": "^3.22.0",
     "morgan": "^1.10.0",
     "node-pg-migrate": "^4.6.2",
-    "pg": "^8.0.3"
+    "pg": "^8.0.3",
+    "nodemon": "^2.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
-    "nodemon": "^2.0.3",
+    // "nodemon": "^2.0.3",
     "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
   },
